<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodegree Apps</string>
    <string name="btn_spotify_text">Spotify Streamer</string>
    <string name="btn_scores_text">Scores App</string>
    <string name="btn_library_text">Library App</string>
    <string name="btn_bigger_text">Build it Bigger</string>
    <string name="btn_capstone_text">Capstone: My Own App</string>
    <string name="toast_text">This button will launch %1$s</string>
    <string name="btn_reader_text">XYZ Reader</string>
</resources>
